:bug: changed footer to vertical alignment

--- a/css/style3.css
+++ b/css/style3.css
@@ -46,7 +46,7 @@ hr {border-bottom: 3px solid #0068FF;}
 .meta a:hover {color: #333;}
 
 .inline-list {list-style: none; margin: 0; padding: 0;}
-.inline-list li {display: inline-block;}
+.inline-list li {display: block;}
 
-footer .inline-list li {padding-left: 40px;}
-footer {margin: 0 auto; position: absolute; bottom: 0px; padding: 60px 0; width: 600px;}
+footer .inline-list li {padding-left: 60px;}
+footer {margin: 0 auto; position: absolute; bottom: 0px; padding: 60px 0;}
